added voice message support

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,4 @@ TIMEOUT=3000
 # Log level
 # https://docs.python.org/3/library/logging.html#logging-levels
 LOG_LEVEL=DEBUG
+WHISPER_SERVICE_URL=http://faster-whisper:8000
