--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,4 @@ TIMEOUT=3000
 # https://docs.python.org/3/library/logging.html#logging-levels
 LOG_LEVEL=DEBUG
 WHISPER_SERVICE_URL=http://faster-whisper:8000
+TTS_SERVICE_URL=http://piper-tts:8000
