added speech to speech support

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,7 @@ TIMEOUT=3000
 LOG_LEVEL=DEBUG
 WHISPER_SERVICE_URL=http://faster-whisper:8000
 TTS_SERVICE_URL=http://piper-tts:8000
+PIPER_VOICE=en_GB-semaine-medium
+WHISPER_MODEL_SIZE=large-v3
+WHISPER_DEVICE=cuda  # cpu / cuda
+WHISPER_COMPUTE_TYPE=int8
