code improvement and cleaning

--- a/.env.example
+++ b/.env.example
@@ -4,14 +4,6 @@ USER_IDS=000,111
 ALLOW_ALL_USERS_IN_GROUPS=0
 INITMODEL=llama-2
 TIMEOUT=3000
-
-# UNCOMMENT ONE OF THE FOLLOWING LINES:
-# OLLAMA_BASE_URL=localhost # to run ollama without docker, using run.py
-# OLLAMA_BASE_URL=ollama-server # to run ollama in a docker container 
-# OLLAMA_BASE_URL=host.docker.internal # to run ollama locally
-
-# Log level
-# https://docs.python.org/3/library/logging.html#logging-levels
 LOG_LEVEL=DEBUG
 WHISPER_SERVICE_URL=http://faster-whisper:8000
 TTS_SERVICE_URL=http://piper-tts:8000
@@ -19,3 +11,4 @@ PIPER_VOICE=en_GB-semaine-medium
 WHISPER_MODEL_SIZE=large-v3
 WHISPER_DEVICE=cuda  # cpu / cuda
 WHISPER_COMPUTE_TYPE=int8
+OLLAMA_URL=http://ollama-server:11434 # to run ollama in a docker container
