--- a/Dockerfile.piper-tts
+++ b/Dockerfile.piper-tts
@@ -33,4 +33,4 @@ RUN mkdir -p /app/voices
 HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
     CMD curl -f http://localhost:8000/health || exit 1
 
-CMD ["python3", "server.py"]
+CMD ["python3", "-u", "server.py"]
