--- a/Dockerfile.faster-whisper
+++ b/Dockerfile.faster-whisper
@@ -16,4 +16,4 @@ RUN pip install --no-cache-dir \
     ctranslate2==4.4.0
 # Copy the API server
 COPY ./whisper /app/
-CMD ["uvicorn", "server:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["python3", "-u", "server.py"]
