added default prompt

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,4 @@ WHISPER_MODEL_SIZE=large-v3
 WHISPER_DEVICE=cuda  # cpu / cuda
 WHISPER_COMPUTE_TYPE=int8
 OLLAMA_URL=http://ollama-server:11434 # to run ollama in a docker container
+DEFAULT_PROMPT="You are a helpful AI voice assistant. We are interacting via voice so keep responses concise, no more than to a sentence or two unless the user specifies a longer response. Do not use special characters and only respond in plain text."
