Added Kokoro TTS

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,9 @@ INITMODEL=llama-2
 TIMEOUT=3000
 LOG_LEVEL=DEBUG
 WHISPER_SERVICE_URL=http://faster-whisper:8000
-TTS_SERVICE_URL=http://piper-tts:8000
+# TTS_SERVICE_URL=http://piper-tts:8000
+TTS_SERVICE_URL=http://kokoro-tts:8880
+TTS_VOICE="af_bella"
 PIPER_VOICE=en_GB-semaine-medium
 WHISPER_MODEL_SIZE=large-v3
 WHISPER_DEVICE=cuda  # cpu / cuda
