--- a/.env.example
+++ b/.env.example
@@ -7,13 +7,12 @@ TIMEOUT=3000
 LOG_LEVEL=INFO
 # TTS_SERVICE_URL=http://piper-tts:8000
 # TTS_VOICE=en_US-norman-medium
-TTS_SERVICE_URL=http://kokoro-tts:8880
+TTS_SERVICE_URL=http://kokoro-tts:8000
 TTS_VOICE=af_bella
 WHISPER_SERVICE_URL=http://faster-whisper:8000
 WHISPER_MODEL_SIZE=large-v3
-WHISPER_DEVICE=cuda  # cpu / cuda
 WHISPER_COMPUTE_TYPE=int8
 OLLAMA_URL=http://ollama-server:11434 # to run ollama in a docker container
 OLLAMA_KEEP_ALIVE=0
 DEFAULT_PROMPT="You are a helpful AI voice assistant. We are interacting via voice so keep responses concise, no more than to a sentence or two unless the user specifies a longer response. Do not use special characters and only respond in plain text."
-USE_CUDA=True
+DEVICE=cuda
