added health check

--- a/Dockerfile.kokoro-tts
+++ b/Dockerfile.kokoro-tts
@@ -8,6 +8,7 @@ RUN apt-get update && apt-get install -y \
     python3.9 \
     python3-pip \
     ffmpeg \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Python dependencies
